force-app/main/default/objects/SFBG_Questionnaire__c/SFBG_Questionnaire__c.object-meta.xml
<CustomObject>
    <description>Represents a Questionnaire record. Part of the Dynamic Questionnaire asset created by Macjules Sevilla.</description>
    <label>Questionnaire</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>