force-app/main/default/objects/SFBG_Questionnaire__c/fields/SFBG_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>SFBG_ExternalId__c</fullName>
    <description>Uniquely identifies a Questionnaire record. Populate this field for data seeding.</description>
    <externalId>true</externalId>
    <inlineHelpText>Populate using a Questionnaire short name that uniquely identifies a questionnaire record followed by version number.</inlineHelpText>
    <label>External ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>