force-app/main/default/objects/SFBG_Questionnaire__c/fields/SFBG_IsAvailableOffline__c.field-meta.xml
<CustomField>
    <fullName>SFBG_IsAvailableOffline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, use this setting to store the questionnaire record in the briefcase.</description>
    <label>Is Available Offline?</label>
    <type>Checkbox</type>
</CustomField>