force-app/main/default/objects/SFBG_Questionnaire__c/fields/SFBG_StartingQuestionId__c.field-meta.xml
<CustomField>
    <fullName>SFBG_StartingQuestionId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The starting question of the questionnaire.</description>
    <label>Starting Question</label>
    <referenceTo>SFBG_Question__c</referenceTo>
    <relationshipLabel>Questionnaires with Starting Question Record</relationshipLabel>
    <relationshipName>QuestionnairesWithStartingQuestionId</relationshipName>
    <type>Lookup</type>
</CustomField>