force-app/main/default/objects/SFBG_Questionnaire__c/fields/SFBG_Version__c.field-meta.xml
<CustomField>
    <fullName>SFBG_Version__c</fullName>
    <description>Use to track different versions of the questionnaire.</description>
    <label>Version</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>