force-app/main/default/objects/SFBG_Questionnaire__c/fields/SPEN_CategoryCriticalInfo__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CategoryCriticalInfo__c</fullName>
    <label>Category Critical Information</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>