force-app/main/default/objects/SFBG_Questionnaire__c/fields/SPEN_CategoryRemarks__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CategoryRemarks__c</fullName>
    <label>Category Remarks</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>